@@ -1,3 +1,7 @@
+2002-07-18  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* w3mimgdisplay.c (main): '5' for w3mimgsize
+
 2002-07-18  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>
 
 	* [w3m-dev 03270] Re: w3m-img for framebuffer merged
